[package]
name = "k_board"
version = "1.1.8"
edition = "2021"
license = "GPL-3.0"
authors = ["Mateo Lafalce", "mateolafalce@protonmail.com"]
description = "A keyboard event handler that allows dynamic development"
keywords = ["keyboard", "terminal", "tui", "tty", "termios"]
repository = "https://github.com/mateolafalce/k_board"
categories = ["text-processing", "text-editors", "os", "encoding",  "development-tools::ffi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
