[package]
name = "k_board"
version = "1.2.4"
edition = "2021"
license = "GPL-3.0"
authors = ["Mateo Lafalce <mateolafalce@protonmail.com>"]
description = "A keyboard event handler that allows dynamic development"
keywords = ["keyboard", "terminal", "tui", "tty", "termios"]
repository = "https://github.com/mateolafalce/k_board"
categories = ["text-processing", "text-editors", "os", "encoding",  "development-tools::ffi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
standar = []
numbers = []
lower_letter = []
upper_letter = []
f = []
ctrl_lower_letter = []
ctrl_upper_letter = []
ctrl_standar = []
ctrl_numbers = []
alt_lower_letter = []
alt_upper_letter = []
alt_numbers = []
alt_gr_lower_letter = []
alt_gr_upper_letter = []
alt_gr_numbers = []
full = []